--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -24,6 +24,12 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
 
+    - name: Install dependencies
+      run: npm install webpack webpack-cli --save-dev
+
+    - name: Build
+      run: npx webpack
+
     - name: Build
       run: |
         npm install
