--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -23,6 +23,9 @@ jobs:
       uses: actions/setup-node@v4
       with:
         node-version: ${{ matrix.node-version }}
+    
+    - name: Debug repository files
+      run: ls -R
 
     - name: Install dependencies
       run: npm install webpack webpack-cli --save-dev
