add webpack config file

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -38,6 +38,9 @@ jobs:
         npm install
         npx webpack
 
+    - name: Verify Webpack configuration
+      run: cat webpack.config.js
+
   publish-gpr:
     needs: build
     runs-on: ubuntu-latest
