--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -23,23 +23,15 @@ jobs:
       uses: actions/setup-node@v4
       with:
         node-version: ${{ matrix.node-version }}
-    
-    - name: Debug repository files
-      run: ls -R
 
     - name: Install dependencies
-      run: npm install webpack webpack-cli --save-dev
+      run: npm install express webpack webpack-cli --save-dev
+
+    - name: List installed dependencies
+      run: npm list
 
     - name: Build
       run: npx webpack
-
-    - name: Build
-      run: |
-        npm install
-        npx webpack
-
-    - name: Verify Webpack configuration
-      run: cat webpack.config.js
 
   publish-gpr:
     needs: build
