--- a/package.json
+++ b/package.json
@@ -1,9 +1,18 @@
 {
+  "name": "chicorei-package",
+  "version": "1.0.0",
+  "description": "Your package description",
+  "main": "dist/bundle.js",
   "scripts": {
     "build": "webpack",
     "test": "jest"
   },
   "dependencies": {
-    "express": "^4.21.2"
+    "express": "^4.21.2" 
+  },
+  "devDependencies": {
+    "webpack": "^5.98.0",
+    "webpack-cli": "^5.1.4",
+    "jest": "^29.7.0"
   }
 }
