--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
     "test": "jest"
   },
   "dependencies": {
-    "express": "^4.21.2" 
+    "express": "^4.21.2"
   },
   "devDependencies": {
+    "jest": "^29.7.0",
+    "supertest": "^7.0.0",
     "webpack": "^5.98.0",
-    "webpack-cli": "^5.1.4",
-    "jest": "^29.7.0"
+    "webpack-cli": "^5.1.4"
   }
 }
